syntax = "proto3";

package user;

message User {
    string id = 1;
}

message UserName {
    string username = 1;
}


service UserService {
    rpc findOne (User) returns (UserName) {}
}   